--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
+    "uuid": "^9.0.0",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/node": "^18.15.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
