--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@radix-ui/react-alert-dialog": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-toolbar": "^1.0.3",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
     "classnames": "^2.3.2",
     "firebase": "^9.20.0",
     "react": "^18.2.0",
