--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^9.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.4",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "uuid": "^9.0.0",
