--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
+      "@features/*": ["src/features/*"],
+      "@lib/*": ["src/lib/*"],
+      "@providers/*": ["src/providers/*"],
       "@routes": ["src/routes/index.tsx"],
+      "@stores/*": ["src/stores/*"],
       "@utils": ["src/utils/index.ts"],
       "@utils/*": ["src/utils/*"]
     },
